# djangoRentEasy

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  manage.py  nixpacks.toml  pyproject.toml  railway.json  requirements.in  requirements.txt
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_groups_account_is_superuser_and_more.py
contacts/: tests.py  views.py
contacts/migrations/: 0001_initial.py
djangorenteasy/: asgi.py  settings.py  urls.py  wsgi.py
hosts/: admin.py  models.py  tests.py  urls.py  views.py
hosts/migrations/: 0001_initial.py  0002_host_user.py  0002_remove_host_is_mvp_alter_host_photo.py
listings/: admin.py  models.py  tests.py  urls.py  validators.py  views.py
listings/migrations/: 0001_initial.py  0002_alter_listing_bathrooms.py  0002_alter_listing_photo_1_alter_listing_photo_2_and_more.py  0003_listing_date_from_listing_date_to_listing_guests_and_more.py  0003_savedlisting.py  0004_alter_listing_photo_1_alter_listing_photo_2_and_more.py  0005_listing_category.py
pages/: tests.py  views.py
templates/: base.html
templates/accounts/: change_password.html  dashboard.html  login.html  register.html
templates/admin/: base_site.html
templates/contact/: email_template.html
templates/hosts/: dashboard.html
templates/listings/: listing.html  listings.html  search.html
templates/pages/: about.html  index.html
templates/partials/: _alerts.html  _banner.html  _footer.html  _navbar.html
(+2 files in other folders)
