[project]
name = "djangorenteasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "crispy-tailwind==1.0.3",
    "dj-database-url==2.3.0",
    "django==4.2.20",
    "django-admin-honeypot-updated-2021~=1.2.0",
    "django-browser-reload==1.18.0",
    "django-cloudinary-storage~=0.3.0",
    "django-crispy-forms==2.3",
    "django-debug-toolbar==5.1.0",
    "django-jazzmin==3.0.0",
    "gunicorn==23.0.0",
    "idna==3.7",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv~=1.0.1",
    "requests==2.32.2",
    "sqlparse==0.5.0",
    "urllib3==2.2.2",
]
